# cw-iv-223_hangman

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
docs/: tech-requirement.md
src/: Makefile  hangman.c  hangman.h  main.c  main.cpp
src/app/: main.c
src/app_lib/: hangman.c  hangman.h
test/: test_hangman.c  test_hangman.h
tests/: Source.cpp
workflows/: build.yml
