cmake_minimum_required(VERSION 3.10)
project(cw-iv-223_hangman)
set(CMAKE_C_STANDARD 11)
add_executable(hangman src/main.c src/hangman.c src/hangman.h)
add_executable(test_hangman test/test_hangman.c src/hangman.c src/hangman.h)
target_link_libraries(test_hangman cmocka)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
include_directories(${PROJECT_SOURCE_DIR}/src)
enable_testing()
add_test(NAME test_hangman COMMAND test_hangman)